# trip-planner

./: .coveragerc  .dockerignore  .env.example  .env.example.dev  .flake8  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
config/: asgi.py  storage_backends.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.txt  local.txt  production.txt
staticfiles/: placeholder.txt
trip_planner/accounts/: admin.py  apps.py  forms.py  urls.py  views.py
trip_planner/accounts/migrations/: 0001_initial.py
trip_planner/accounts/tests/: test_models.py  test_views.py
trip_planner/calendars/: apps.py  conftest.py  urls.py  views.py
trip_planner/calendars/tests/: test_views.py
trip_planner/core/: apps.py  mixins.py  models.py
trip_planner/core/templatetags/: calendars_tags.py
trip_planner/maps/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
trip_planner/maps/migrations/: 0001_initial.py
trip_planner/markers/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
trip_planner/markers/migrations/: 0001_initial.py
trip_planner/markers/tests/: test_models.py  test_views.py
trip_planner/pages/: apps.py  forms.py  urls.py  views.py
trip_planner/pages/tests/: test_views.py
trip_planner/static/: styles.css
trip_planner/static/css/: fullcalendar-main.css  leaflet-main.css  main.css
trip_planner/templates/: base.html
trip_planner/templates/account/: email.html  email_confirm.html  login copy.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html
trip_planner/templates/accounts/: profile.html
trip_planner/templates/calendars/: calendar.html
trip_planner/templates/maps/: map.html  marker_list.html
trip_planner/templates/markers/: marker_delete.html  marker_form.html  marker_list.html  marker_list_all_trips.html  marker_update_form.html
trip_planner/templates/pages/: contact.html  home.html
trip_planner/templates/partials/: _bottom_fullcalendar.html  _bottom_scripts.html  _messages.html  _sidebar.html  _upper_fullcalendar.html
trip_planner/templates/trips/: activity_delete.html  activity_form.html  activity_update_form.html  trip_day_detail.html  trip_day_update_form.html  trip_delete.html  trip_detail.html  (+4 more)
trip_planner/trips/: admin.py  apps.py  conftest.py  forms.py  models.py  urls.py  views.py
(+5 files in other folders)
