[tool.poetry]
name = "django_trip_planner"
version = "0.1.0"
description = ""
authors = ["Ankur Ahuja <AnkurAhuja.TECH@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
psycopg2-binary = "^2.9.1"
django-debug-toolbar = "^3.2.1"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
