[tool.poetry]
name = "django_trip_planner"
version = "0.1.0"
description = ""
authors = ["Ankur Ahuja <AnkurAhuja.TECH@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
psycopg2-binary = "^2.9.1"
django-debug-toolbar = "^3.2.1"
django-environ = "^0.4.5"
django-allauth = "^0.45.0"
black = "^21.7b0"
flake8 = "^3.9.2"
pylint = "^2.9.5"
pylint-django = "^2.4.4"
pytest = "^6.2.4"
coverage = "^5.5"
pytest-django = "^4.4.0"
django-crispy-forms = "^1.12.0"
crispy-bootstrap5 = "^0.4"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 119
skip-string-normalization = true
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
