[tool.poetry]
name = "django_trip_planner"
version = "0.2.0"
description = ""
authors = ["Ankur Ahuja <AnkurAhuja.TECH@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.5"
psycopg2-binary = "^2.9.7"
django-environ = "0.11.2"
django-allauth = "0.55.2"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "0.7"
django-leaflet = "0.29.0"
djangorestframework = "^3.14.0"
djangorestframework-gis = "^1.0"
django-filter = "^23.2"
Pillow = "9.5.0"
django-imagekit = "^4.1.0"
boto3 = "^1.28.40"
django-storages = "^1.14"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^4.2.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-isort = "^6.0.0"
pylint = "^2.17.5"
pylint-django = "^2.5.3"
pytest = "^7.4.1"
coverage = "^7.3.0"
pytest-django = "^4.5.2"

[tool.black]
line-length = 119
exclude = '''
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
'''

[tool.isort]
profile = "black"
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
